<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<resources>
  <string name="nickname_setting">닉네임 설정</string>
  <string name="register_account">계정 등록</string>
  <string name="service_terms">서비스 이용약관</string>
  <string name="detail"><u>내용보기</u></string>
  <string name="agree_to_service_terms">서비스 이용약관 동의 <font color="#6B7280">(필수)</font></string>
  <string name="agree_to_collect_personal_info">개인정보 수집 이용 동의 <font color="#6B7280">(필수)</font></string>
  <string name="agree_to_provide_personal_info_to_3rd_party">개인정보 제3자 제공 동의 <font color="#6B7280">(필수)</font></string>
  <string name="is_over_14_year_old">만 14세 이상입니다. <font color="#6B7280">(필수)</font></string>
  <string name="agree_to_all_required_items">모든 필수항목에 동의합니다.</string>
  <string name="would_like_to_receive_info_about_new_cafe_and_events">뉴스레터 형식으로 신규 카페, 이벤트에 대한 정보를 받고 싶습니다. <font color="#6B7280">(선택)</font></string>
  <string name="register_account_title">서비스를 이용하려면\n계정을 등록해야 합니다.</string>
  <string name="hangeul_ipsum">피는 맺어, 용기가 꽃이 설산에서 무엇을 그들에게 든 말이다. 가슴이 반짝이는 심장의 피어나는 얼음과 것이다. 그들의 얼마나 무엇을 같으며, 굳세게 싹이 것이다. 천고에 불러 청춘 유소년에게서 아름다우냐? 우리는 같이, 피가 설산에서 것은 인류의 곧 그들에게 인도하겠다는 황금시대다. 봄날의 유소년에게서 생의 그림자는 천지는 얼마나 장식하는 스며들어 것이다. 우리의 품으며, 그들의 공자는 피가 웅대한 위하여 있다. 용기가 이상 황금시대를 뛰노는 이것이야말로 그와 듣는다. 끓는 대고, 오아이스도 것은 발휘하기 쓸쓸하랴? 심장의 넣는 뜨고, 무엇을 것이다. 따뜻한 청춘은 놀이 우리 고행을 불어 구할 영원히 것이다. 보이는 무엇을 청춘의 그들의 쓸쓸한 주며, 뿐이다. 구하지 보이는 그러므로 원질이 예가 거친 말이다. 피는 없으면, 싸인 부패뿐이다. 사라지지 그들은 꽃이 따뜻한 관현악이며, 봄바람이다. 이상은 청춘에서만 이것을 용감하고 못할 오직 끓는다. 일월과 속에 평화스러운 이성은 힘있다. 하였으며, 별과 위하여 봄바람이다. 얼마나 행복스럽고 기관과 것이다. 투명하되 같은 장식하는 속에 아니다. 얼마나 뭇 붙잡아 방지하는 트고, 따뜻한 들어 듣는다. 이 따뜻한 그들에게 바로 이상 위하여 말이다. 사랑의 꽃 사랑의 인간에 인간은 것이다. 날카로우나 이상을 웅대한 같이, 관현악이며, 청춘에서만 것이다. 이 실로 끓는 때문이다. 원질이 그들은 옷을 희망의 피에 것이다. 인생을 그들의 크고 용기가 구하기 유소년에게서 밝은 되려니와, 사막이다. 커다란 그들의 낙원을 그들은 심장의 웅대한 바이며, 사람은 커다란 철환하였는가? 있는 주며, 원질이 것이다.</string>
  <string name="check">확인</string>
  <string name="please_agree_to_all_required_items">필수 항목에 모두 동의 해주세요.</string>
  <string name="nickname">닉네임</string>
  <string name="next">다음</string>
  <string name="min_length_error_text">최소 2자 이상 입력해주세요.</string>
  <string name="register_nickname_title">닉네임을 설정해주세요.</string>
  <string name="temp">최소 2자 이상 입력해주세요.</string>
  <string name="empty_error_text">닉네임을 입력해주세요.</string>
</resources>
