<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="us.wedemy.eggeum.onboard.ui.RegisterNicknameFragment">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/tb_register_nickname"
    style="@style/Widget.Eggeum.Toolbar.WithArrow"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:elevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      style="@style/Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/nickname_setting"
      android:textColor="@color/gray_900" />
  </com.google.android.material.appbar.MaterialToolbar>

  <TextView
    android:id="@+id/tv_register_nickname_title"
    style="@style/H3"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/register_nickname_title"
    android:textColor="@color/gray_900"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tb_register_nickname" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_register_nickname"
    style="@style/Widget.Eggeum.TextInputLayout.OutlinedBox"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="62dp"
    app:boxStrokeColor="@color/gray_500"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_register_nickname_title">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/tiet_register_nickname"
      style="@style/Widget.Eggeum.TextInputEditText.OutlinedBox"
      android:ellipsize="end"
      android:hint="@string/nickname"
      android:inputType="text"
      android:maxLines="1" />

  </com.google.android.material.textfield.TextInputLayout>


  <View
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginBottom="16dp"
    android:background="@color/gray_200"
    app:layout_constraintBottom_toTopOf="@id/btn_register_nickname"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/btn_register_nickname"
    style="@style/Widget.Eggeum.Button"
    android:layout_width="0dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    android:text="@string/next"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
