<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="us.wedemy.eggeum.onboard.ui.RegisterAccountFragment">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/tb_register_account"
    style="@style/Widget.Eggeum.Toolbar.WithArrow"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:elevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      style="@style/Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/register_account"
      android:textColor="@color/gray_900" />
  </com.google.android.material.appbar.MaterialToolbar>

  <TextView
    android:id="@+id/tv_register_account_title"
    style="@style/H3"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/register_account_title"
    android:textColor="@color/gray_900"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tb_register_account" />

  <CheckBox
    android:id="@+id/cb_agree_to_service_terms"
    android:layout_width="16dp"
    android:layout_height="16dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="38dp"
    android:background="@drawable/selector_check_16"
    android:button="@android:color/transparent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_register_account_title" />

  <TextView
    android:id="@+id/tv_agree_to_service_terms"
    style="@style/TextSMedium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/agree_to_service_terms"
    android:textColor="@color/gray_700"
    app:layout_constraintBottom_toBottomOf="@id/cb_agree_to_service_terms"
    app:layout_constraintStart_toEndOf="@+id/cb_agree_to_service_terms"
    app:layout_constraintTop_toTopOf="@id/cb_agree_to_service_terms" />

  <TextView
    android:id="@+id/tv_agree_to_service_terms_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:fontFamily="@font/pretendard_regular"
    android:text="@string/detail"
    app:layout_constraintBottom_toBottomOf="@id/cb_agree_to_service_terms"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/cb_agree_to_service_terms" />

  <CheckBox
    android:id="@+id/cb_agree_to_collect_personal_info"
    android:layout_width="16dp"
    android:layout_height="16dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="29dp"
    android:background="@drawable/selector_check_16"
    android:button="@android:color/transparent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cb_agree_to_service_terms" />

  <TextView
    android:id="@+id/tv_agree_to_collect_personal_info"
    style="@style/TextSMedium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/agree_to_collect_personal_info"
    android:textColor="@color/gray_700"
    app:layout_constraintBottom_toBottomOf="@id/cb_agree_to_collect_personal_info"
    app:layout_constraintStart_toEndOf="@+id/cb_agree_to_collect_personal_info"
    app:layout_constraintTop_toTopOf="@id/cb_agree_to_collect_personal_info" />

  <TextView
    android:id="@+id/tv_agree_to_collect_personal_info_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:fontFamily="@font/pretendard_regular"
    android:text="@string/detail"
    app:layout_constraintBottom_toBottomOf="@id/cb_agree_to_collect_personal_info"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/cb_agree_to_collect_personal_info" />

  <CheckBox
    android:id="@+id/cb_agree_to_provide_personal_info_to_3rd_party"
    android:layout_width="16dp"
    android:layout_height="16dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="29dp"
    android:background="@drawable/selector_check_16"
    android:button="@android:color/transparent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cb_agree_to_collect_personal_info" />

  <TextView
    android:id="@+id/tv_agree_to_provide_personal_info_to_3rd_party"
    style="@style/TextSMedium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/agree_to_provide_personal_info_to_3rd_party"
    android:textColor="@color/gray_700"
    app:layout_constraintBottom_toBottomOf="@id/cb_agree_to_provide_personal_info_to_3rd_party"
    app:layout_constraintStart_toEndOf="@+id/cb_agree_to_provide_personal_info_to_3rd_party"
    app:layout_constraintTop_toTopOf="@id/cb_agree_to_provide_personal_info_to_3rd_party" />

  <TextView
    android:id="@+id/tv_agree_to_provide_personal_info_to_3rd_party_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:fontFamily="@font/pretendard_regular"
    android:text="@string/detail"
    app:layout_constraintBottom_toBottomOf="@id/cb_agree_to_provide_personal_info_to_3rd_party"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/cb_agree_to_provide_personal_info_to_3rd_party" />

  <CheckBox
    android:id="@+id/cb_over_14_year_old"
    android:layout_width="16dp"
    android:layout_height="16dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="29dp"
    android:background="@drawable/selector_check_16"
    android:button="@android:color/transparent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cb_agree_to_provide_personal_info_to_3rd_party" />

  <TextView
    android:id="@+id/tv_over_14_year_old"
    style="@style/TextSMedium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/over_14_year_old"
    android:textColor="@color/gray_700"
    app:layout_constraintBottom_toBottomOf="@id/cb_over_14_year_old"
    app:layout_constraintStart_toEndOf="@+id/cb_over_14_year_old"
    app:layout_constraintTop_toTopOf="@id/cb_over_14_year_old" />

  <CheckBox
    android:id="@+id/cb_would_like_to_receive_info_about_new_cafe_and_events"
    android:layout_width="16dp"
    android:layout_height="16dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="39dp"
    android:background="@drawable/selector_check_16"
    android:button="@android:color/transparent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cb_over_14_year_old" />

  <TextView
    android:id="@+id/tv_would_like_to_receive_info_about_new_cafe_and_events"
    style="@style/TextSMedium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/would_like_to_receive_info_about_new_cafe_and_events"
    android:textColor="@color/gray_700"
    app:layout_constraintBottom_toBottomOf="@id/cb_would_like_to_receive_info_about_new_cafe_and_events"
    app:layout_constraintStart_toEndOf="@+id/cb_would_like_to_receive_info_about_new_cafe_and_events"
    app:layout_constraintTop_toTopOf="@id/cb_would_like_to_receive_info_about_new_cafe_and_events" />

  <View
    android:id="@+id/line_register_account_divider"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="12dp"
    android:background="@color/gray_200"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_would_like_to_receive_info_about_new_cafe_and_events" />

  <CheckBox
    android:id="@+id/cb_agree_to_all_required_items"
    android:layout_width="24dp"
    android:layout_height="24dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/selector_check_background_24"
    android:button="@android:color/transparent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/line_register_account_divider" />

  <TextView
    android:id="@+id/tv_agree_to_all_required_item"
    style="@style/TextMSemiBold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/agree_to_all_required_items"
    android:textColor="@color/gray_700"
    app:layout_constraintBottom_toBottomOf="@id/cb_agree_to_all_required_items"
    app:layout_constraintStart_toEndOf="@+id/cb_agree_to_all_required_items"
    app:layout_constraintTop_toTopOf="@id/cb_agree_to_all_required_items" />

  <TextView
    android:id="@+id/tv_please_to_agree_all_required_item"
    style="@style/TextXsRegular"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:text="@string/please_agree_to_all_required_items"
    android:textColor="@color/error_500"
    android:visibility="invisible"
    app:layout_constraintBottom_toTopOf="@id/line_register_account"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <View
    android:id="@+id/line_register_account"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginBottom="16dp"
    android:background="@color/gray_200"
    app:layout_constraintBottom_toTopOf="@id/btn_register_nickname"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/btn_register_nickname"
    style="@style/Widget.Eggeum.Button"
    android:layout_width="0dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    android:text="@string/next"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>